# sshmgmt

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  manager.rs  model.rs  parser.rs  probe.rs  store.rs  tunnel.rs
src/components/: PasswordModal.tsx  TunnelEditor.tsx  TunnelList.tsx  UploadKeyModal.tsx
