[package]
name = "sshmgmt"
version = "0.1.0"
description = "SSH Tunnel Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "sshmgmt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSH
russh = "0.44"
russh-keys = "0.44"
async-trait = "0.1"

# Async
tokio = { version = "1", features = ["full"] }

# Storage
keyring = "3"

# Utilities
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
shell-words = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

